--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/numaxesimg"
         android:layout_marginStart="10dp"
+        android:padding="15dp"
         app:layout_constraintBottom_toTopOf="@id/textView12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
