--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
-    <color name="green">#03AA00</color>
     <color name="transparent">#F8F8F8</color>
+
+    <color name="green">#03AA00</color>
+    <color name="default_icon_color">#808080</color>
 </resources>
